--- a/style.css
+++ b/style.css
@@ -102,3 +102,65 @@ span {
     font-size: 0.85rem;
     font-weight:700;
 }
+
+.nav-cart i{
+    font-size:40px;
+
+
+
+}
+.nav-cart{
+    font-size:0.85rem;
+    font-weight: 700;
+}
+.panel{
+    height: 40px;
+    background-color: black;
+    display: flex;
+    color:white;
+    align-items: center;
+    justify-content:space-evenly;
+
+
+}
+
+.panel-ops p{
+    display:inline;
+    margin-left: 10px;
+}
+
+.panel-ops{
+    width:70%;
+    font-size: 0.85rem;
+}
+
+.panel-deals{
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+.hero-section{
+    background-image: url("hero_image.jpg");
+    height:600px;
+    background-size: cover;
+    display:flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.hero-msg{
+    background-color: white;
+    color:black;
+    height: 40px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    font-size:0.85rem;
+    width:80%;
+    margin-bottom: 25px;
+
+}
+
+.hero-msg a{
+    color: blue;
+}
