--- a/style.css
+++ b/style.css
@@ -164,3 +164,116 @@ span {
 .hero-msg a{
     color: blue;
 }
+
+
+.box{
+    border:2px solid black;
+    height:420px;
+    width:23%;
+    background-color: white;
+    margin-top: 15px;
+}
+
+.shop-section{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly; 
+    background-color: whitesmoke;
+
+}
+
+.box-img{
+    height:300px;
+    padding: 20px 0px 15px;
+    background-size: cover;
+    margin-top:1rem;
+    margin-bottom: 1rem;
+
+}
+
+.box-content{
+    margin-left:10px;
+    margin-right: 10px;
+}
+
+.box-content p{
+    color:blue;
+
+}
+
+.footer{
+    margin-top: 50px;
+}
+.foot-panel1{
+    background-color: #37475a;
+    color:white;
+    height:50px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+
+
+}
+
+.foot-panel2{
+    background: gray;
+    color:white;
+    height:300px;
+    display:flex;
+    justify-content: space-around;
+}
+
+ul a{
+    display:block;
+    font-size:0.85rem;
+    margin-top: 10px;
+    color:#dddddd;
+
+}
+
+.foot-panel3{
+    background-color: gray;
+    color:white;
+    border-top: 0.5px solid white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo{
+    background-image: url("amazon_logo.png");
+    background-size: cover;
+    height:50px;
+    width:100px;
+
+}
+
+.foot-panel4{
+    background-color: gray;
+    color:white;
+    display:flex;
+    height:100px;
+    justify-content: center;
+
+}
+
+.pages{
+    padding-top:25px;
+}
+
+.copyright{
+    padding-top:5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
